<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg"
    android:orientation="vertical"
    tools:context=".mvp.view.SecondActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="88dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_back" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#FFFFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="测试"
                android:textColor="#FFFFFFFF"
                android:textSize="16sp"
                />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="22dp"
            android:background="@drawable/dialog_nothing_ok"
            android:gravity="center"
            android:text="@string/tv_edit"
            android:textColor="@color/tv_checked"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="22dp"
            android:background="@drawable/bg_no_delete"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/tv_delete"
            android:textColor="@color/tv_delete_nothing"
            android:textSize="20sp"
            android:visibility="gone"
             />

        <TextView
            android:id="@+id/tv_select_all_or_not"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/tv_delete"
            android:background="@drawable/dialog_nothing_ok"
            android:gravity="center"
            android:text="@string/tv_select_all"
            android:textColor="@color/tv_checked"
            android:textSize="10sp"
            android:visibility="gone" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/rl_no_msg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img_no_msg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/icon_no_message" />

        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_no_msg"
            android:layout_alignLeft="@id/img_no_msg"
            android:text="@string/no_msg"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>


</LinearLayout>